--- a/views/base.pug
+++ b/views/base.pug
@@ -23,4 +23,8 @@ html
     //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
     //- script(src='/js/mapbox.js')
     //- script(src='/js/login.js')
-    script(src='/js/bundle.js')
+    //- script(src='/js/bundle.js')
+    //- At the end of your body or within a block for scripts
+script(src='https://unpkg.com/axios/dist/axios.min.js')
+script(src='/js/mapbox.js')
+script(src='/js/login.js')
