--- a/views/tour.pug
+++ b/views/tour.pug
@@ -2,8 +2,8 @@ extends base
 include _reviewCard
 
 block append head
-  script(src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js')
-  link(href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css' rel='stylesheet')
+  link(rel='stylesheet' href='https://unpkg.com/leaflet@1.9.4/dist/leaflet.css' integrity='sha256-p4ZSp2P/c9fBfS0m1fM0n2W5y3Pz5w7v/K3n4D5P8/J5k=' crossorigin='')
+  script(src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js' integrity='sha256-nZfeFfQ+nFp+d+lG6f8/d5Z9l/65X3Q9h+tM+y0t/w8=' crossorigin='')
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
@@ -16,20 +16,20 @@ block content
   section.section-header
     .header__hero
       .header__hero-overlay &nbsp;
-      img.header__hero-img(src=`/img/tours/${tour.imageCover}`, alt=`${tour.name}`)
-
+      if tour && tour.imageCover
+        img.header__hero-img(src=`/img/tours/${tour.imageCover}`, alt=tour.name || '')
     .heading-box
       h1.heading-primary
-        span= `${tour.name} tour`
+        span #{tour && tour.name ? tour.name : 'Unnamed'} tour
       .heading-box__group
         .heading-box__detail
           svg.heading-box__icon
             use(xlink:href='/img/icons.svg#icon-clock')
-          span.heading-box__text= `${tour.duration} days`
+          span.heading-box__text= tour && tour.duration ? `${tour.duration} days` : 'N/A'
         .heading-box__detail
           svg.heading-box__icon
             use(xlink:href='/img/icons.svg#icon-map-pin')
-          span.heading-box__text= tour.startLocation.description
+          span.heading-box__text= tour && tour.startLocation && tour.startLocation.description ? tour.startLocation.description : 'No location available'
 
   section.section-description
     .overview-box
@@ -37,51 +37,67 @@ block content
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Quick facts
 
-          - const date = tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'})
+          - const date = (tour && tour.startDates && tour.startDates[0]) ? tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'}) : 'N/A'
           +overviewBox('Next date', date, 'calendar')
-          +overviewBox('Difficulty', tour.difficulty, 'trending-up')
-          +overviewBox('Participants', `${tour.maxGroupSize} people`, 'user')
-          +overviewBox('Rating', `${tour.ratingsAverage} / 5`, 'star')
+          +overviewBox('Difficulty', tour && tour.difficulty ? tour.difficulty : 'N/A', 'trending-up')
+          +overviewBox('Participants', tour && tour.maxGroupSize ? `${tour.maxGroupSize} people` : 'N/A', 'user')
+          +overviewBox('Rating', tour && tour.ratingsAverage ? `${tour.ratingsAverage} / 5` : 'N/A', 'star')
 
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Your tour guides
-
-          each guide in tour.guides
-            .overview-box__detail
-              img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.name}`)
-
-              - if (guide.role === 'lead-guide')
-                span.overview-box__label Lead guide
-              - if (guide.role === 'guide')
-                span.overview-box__label Tour guide
-              span.overview-box__text= guide.name
+          if tour && tour.guides && tour.guides.length
+            each guide in tour.guides
+              .overview-box__detail
+                if guide.photo
+                  img.overview-box__img(src=`/img/users/${guide.photo}`, alt=guide.name || '')
+                if guide.role === 'lead-guide'
+                  span.overview-box__label Lead guide
+                else if guide.role === 'guide'
+                  span.overview-box__label Tour guide
+                span.overview-box__text= guide.name || 'Unnamed'
+          else
+            p No guides available.
 
     .description-box
-      h2.heading-secondary.ma-bt-lg= `About ${tour.name} tour`
-      - const parapraphs = tour.description.split('\n');
-      each p in parapraphs
-        p.description__text= p
+      h2.heading-secondary.ma-bt-lg= `About ${tour && tour.name ? tour.name : ''} tour`
+      if tour && tour.description
+        - const paragraphs = tour.description.split('\n');
+        each p in paragraphs
+          p.description__text= p
+      else
+        p.description__text No description available.
 
   section.section-pictures
-    each img, i in tour.images
-      .picture-box
-        img.picture-box__img(src=`/img/tours/${img}`, alt=`The Park Camper Tour ${i + 1}`, class=`picture-box__img--${i + 1}`)
+    if tour && tour.images && tour.images.length
+      each img, i in tour.images
+        .picture-box
+          img.picture-box__img(src=`/img/tours/${img}`, alt=`${tour && tour.name ? tour.name : 'Tour'} ${i + 1}`, class=`picture-box__img--${i + 1}`)
+    else
+      p No images available.
 
   section.section-map
-    #map(data-locations=`${JSON.stringify(tour.locations)}`)
+    if tour && tour.locations
+      #map(data-locations=`${JSON.stringify(tour.locations)}`)
+    else
+      p No map locations available.
 
   section.section-reviews
     .reviews
-      each review in tour.reviews
-        +reviewCard(review)
+      if tour && tour.reviews && tour.reviews.length
+        each review in tour.reviews
+          +reviewCard(review)
+      else
+        p No reviews available.
 
   section.section-cta
     .cta
       .cta__img.cta__img--logo
         img(src='/img/logo-white.png', alt='Natours logo')
-      img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}`, alt='Tour picture')
-      img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}`, alt='Tour picture')
+      if tour && tour.images && tour.images[1]
+        img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}`, alt='Tour picture')
+      if tour && tour.images && tour.images[2]
+        img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}`, alt='Tour picture')
       .cta__content
         h2.heading-secondary What are you waiting for?
-        p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
+        p.cta__text= tour && tour.duration ? `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!` : 'Book your adventure now!'
         button.btn.btn--green.span-all-rows Book tour now!
