In this section i have coverd the frontend part almost with pug

--- a/views/base.pug
+++ b/views/base.pug
@@ -25,6 +25,7 @@ html
     //- script(src='/js/login.js')
     //- script(src='/js/bundle.js')
     //- At the end of your body or within a block for scripts
-script(src='https://unpkg.com/axios/dist/axios.min.js')
-script(src='/js/mapbox.js')
-script(src='/js/login.js')
+//- script(src='https://unpkg.com/axios/dist/axios.min.js')
+//- script(src='/js/mapbox.js')
+//- script(src='/js/login.js')
+script(src='/js/bundle.js')
