--- a/views/account.pug
+++ b/views/account.pug
@@ -30,10 +30,7 @@ block content
         .user-view__form-container
           h2.heading-secondary.ma-bt-md Your account settings
           
-          //- WITHOUT API
-          //- form.form.form-user-data(action='/submit-user-data' method='POST')
-          
-          //- WITH API
+          //- WITH API (AJAX)
           form.form.form-user-data
             .form__group
               label.form__label(for='name') Name
@@ -41,9 +38,12 @@ block content
             .form__group.ma-bt-md
               label.form__label(for='email') Email address
               input#email.form__input(type='email', value=`${user.email}`, required, name='email')
+            
             .form__group.form__photo-upload
-              img.form__user-photo(src=`/img/users/${user.photo}`, alt='User photo')
-              a.btn-text(href='') Choose new photo
+              img.form__user-photo(src=`/img/users/${user.photo}?${Date.now()}`, alt='User photo')
+              input.form__upload(type='file', accept='image/*', id='photo', name='photo')
+              label(for='photo') Choose new photo
+              
             .form__group.right
               button.btn.btn--small.btn--green Save settings
               
